@@ -9,6 +9,18 @@ java {
 	sourceCompatibility = '21'
 }
 
+tasks.withType(JavaCompile) {
+	options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+	jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+	jvmArgs += '--enable-preview'
+}
+
 repositories {
 	mavenCentral()
 }
